--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spicy & Juicy</title>
+    <title>Thực đơn - Spicy & Juicy</title>
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
@@ -14,8 +14,10 @@
 <body>
     <div id="main">
         <div id="header"></div>
-        <div id="slider"></div>
-        <div id="content"></div>
+
+        <div id="content" class="page-content">
+        </div>
+
         <div id="footer"></div>
     </div>
 
