--- a/public/pages/reserve.html
+++ b/public/pages/reserve.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đặt bàn Chuyên nghiệp - Spicy & Juicy</title>
-
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    
-    <!-- Thư viện lịch Flatpickr (Bắt buộc cho trang này) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/vn.js"></script>
-    
-    <!-- CSS của bạn -->
     <link rel="stylesheet" href="../../src/css/style.css">
     <link rel="stylesheet" href="../../src/css/reserve.css"> 
 </head>
@@ -24,25 +18,27 @@
         <header id="header"></header>
         <main id="content" class="page-content">
             <div class="booking-wrapper">
-                <!-- CỘT BÊN TRÁI - FORM ĐẶT BÀN -->
+                <!-- FORM ĐẶT BÀN -->
                 <section class="booking-form-container">
                     <h1 class="booking-form-container__title">Đặt Bàn Online</h1>
                     <p class="booking-form-container__description">Vui lòng điền thông tin để chúng tôi phục vụ bạn tốt nhất.</p>
                     <form id="reservationForm" class="booking-form">
-                        <!-- ... (các element của form giữ nguyên như cũ) ... -->
-                        <div class="booking-form__group"><label for="branch" class="booking-form__label">Chọn chi nhánh</label><select id="branch" name="branch" class="booking-form__select" required><option value="" disabled selected>-- Chọn một nhà hàng --</option><option value="Spicy & Juicy - Quận 1, TP.HCM">Spicy & Juicy - Quận 1, TP.HCM</option></select></div>
-                        <div class="booking-form__group"><label for="people" class="booking-form__label">Số người</label><input type="number" id="people" name="people" class="booking-form__input" min="1" max="50" placeholder="2" required></div>
+                        <div class="booking-form__group">
+                          <label for="branch" class="booking-form__label">Chọn chi nhánh</label>
+                            <select id="branch" name="branch" class="booking-form__select" required>
+                              <option value="" disabled selected>-- Vui lòng chọn một nhà hàng --</option></select></div>
+                        <div class="booking-form__group"><label for="people" class="booking-form__label">Số người</label><input type="number" id="people" name="people" class="booking-form__input" min="1" max="50" placeholder="1" required></div>
                         <div class="booking-form__group"><label for="date" class="booking-form__label">Chọn ngày</label><input type="text" id="date" name="date" class="booking-form__input" placeholder="Nhấp để chọn ngày" readonly required></div>
                         <div class="booking-form__group"><label for="time" class="booking-form__label">Chọn giờ</label><select id="time" name="time" class="booking-form__select" required><option value="" disabled selected>-- Chọn khung giờ --</option><option value="19:00">19:00</option></select></div>
                         <h2 class="booking-form__sub-title">Thông Tin Liên Hệ</h2>
-                        <div class="booking-form__group"><label for="fullname" class="booking-form__label">Họ và tên</label><input type="text" id="fullname" name="fullname" class="booking-form__input" placeholder="Nguyễn Văn A" required></div>
-                        <div class="booking-form__group"><label for="phone" class="booking-form__label">Số điện thoại</label><input type="tel" id="phone" name="phone" class="booking-form__input" placeholder="09xxxxxxxx" required></div>
+                        <div class="booking-form__group"><label for="fullname" class="booking-form__label">Họ và tên</label><input type="text" id="fullname" name="fullname" class="booking-form__input" placeholder=" " required></div>
+                        <div class="booking-form__group"><label for="phone" class="booking-form__label">Số điện thoại</label><input type="tel" id="phone" name="phone" class="booking-form__input" placeholder=" " required></div>
                         <div class="booking-form__group"><label for="email" class="booking-form__label">Email</label><input type="email" id="email" name="email" class="booking-form__input" placeholder="email@example.com"></div>
                         <div class="booking-form__group"><label for="notes" class="booking-form__label">Ghi chú (tùy chọn)</label><textarea id="notes" name="notes" class="booking-form__textarea" rows="4" placeholder="Ví dụ: Cho tôi bàn gần cửa sổ..."></textarea></div>
                         <button type="submit" class="booking-form__submit">Tiếp Tục</button>
                     </form>
                 </section>
-                <!-- CỘT BÊN PHẢI - THÔNG TIN THÊM -->
+                <!-- CỘT BÊN PHẢI : THÔNG TIN THÊM -->
                 <aside class="booking-info">
                     <div class="booking-info__card">
                         <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?q=80&w=2070&auto=format&fit=crop" alt="Không gian nhà hàng" class="booking-info__image">
@@ -59,6 +55,7 @@
         <footer id="footer"></footer>
     </div>
     <script src="../../src/js/loader.js"></script>
+    <script src="../../src/js/data.js"></script>
     <script src="../../src/js/reserve-logic.js"></script>
 </body>
 </html>
