--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css" />
 </head>
 
 <body>
