--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <div id="header"></div>
         <div id="content" class="page-content homepage">
             <div class="background-slider">
-                <div class="bg-image active" style="background-image: url('/src/assets/images/nhahang.png');"></div>
-                <div class="bg-image" style="background-image: url('/src/assets/images/lau2.png');"></div>
-                <div class="bg-image" style="background-image: url('/src/assets/images/chen-lau.png');"></div>
+                <div class="bg-image active" style="background-image: url('/src/assets/images/bgr-food3.jpg');"></div>
+                <div class="bg-image" style="background-image: url('/src/assets/images/dinner.png');"></div>
+                <div class="bg-image" style="background-image: url('/src/assets/images/nhahang.png');"></div>
             </div>
 
             <div class="gradient-overlay"></div>
@@ -33,10 +33,10 @@
 
             <div class="indicators">
                 <div class="indicator active" data-index="0"
-                    style="background-image: url('/src/assets/images/nhahang.png');"></div>
-                <div class="indicator" data-index="1" style="background-image: url('/src/assets/images/lau2.png');">
+                    style="background-image: url('/src/assets/images/bgr-food3.jpg');"></div>
+                <div class="indicator" data-index="1" style="background-image: url('/src/assets/images/dinner.png');">
                 </div>
-                <div class="indicator" data-index="2" style="background-image: url('/src/assets/images/chen-lau.png');">
+                <div class="indicator" data-index="2" style="background-image: url('/src/assets/images/nhahang.png');">
                 </div>
             </div>
         </div>
@@ -76,6 +76,12 @@
                 </div>
             </section>
         </section>
+
+        <div>
+            <form action="">
+
+            </form>
+        </div>
         <div id="footer"></div>
     </div>
 
