Tach rieng file menu.css va cap nhat html

--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="../../src/assets/images/logo.png" />
     <link rel="stylesheet" href="../../src/css/style.css" />
+    <link rel="stylesheet" href="../../src/css/menu.css" />
   </head>
 
   <body>
@@ -356,7 +357,6 @@
           </div>
         </section>
 
-        
         <script
           type="module"
           src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
