--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <div class="gradient-overlay"></div>
 
             <div class="content">
-                <h1 class="page-title">Đặt món ngon mọi lúc mọi nơi</h1>
+                <h1 class="page-title">Nhà Hàng Bạn Yêu, Ngay Trong Phòng Khách</h1>
                 <p>Thực đơn đa dạng – Cơm, Phở, Mì, Đồ uống – giao hàng nhanh chóng.</p>
                 <button class="btn btn-primary">Đặt món ngay</button>
             </div>
@@ -77,17 +77,89 @@
             </section>
         </section>
 
-        <div>
-            <form action="">
+        <section class="booking-section" id="booking">
+            <div class="container booking-grid">
+                <div class="booking-copy">
+                    <p class="booking-eyebrow">ĐẶT BÀN</p>
+                    <h2>Trải nghiệm vị ngon tại Spicy &amp; Juicy</h2>
+                    <p>
+                        Đặt bàn trực tuyến để giữ chỗ cho những buổi hẹn quan trọng. Đội ngũ của chúng tôi sẽ
+                        liên hệ lại để xác nhận và tư vấn thực đơn phù hợp nhất với bạn.
+                    </p>
+                    <ul class="booking-benefits">
+                        <li><i class="fa-solid fa-check"></i>Không phụ phí, xác nhận trong 10 phút</li>
+                        <li><i class="fa-solid fa-check"></i>Không gian riêng tư theo yêu cầu</li>
+                        <li><i class="fa-solid fa-check"></i>Thực đơn theo mùa &amp; dịp đặc biệt</li>
+                    </ul>
+                </div>
 
-            </form>
+                <form class="booking-form" id="bookingForm">
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="fullname">Họ và tên *</label>
+                            <input type="text" id="fullname" name="fullname" required placeholder="Nhập họ và tên">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Số điện thoại *</label>
+                            <input type="tel" id="phone" name="phone" required placeholder="093 xxx xxxx">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email *</label>
+                            <input type="email" id="email" name="email" required placeholder="spicyandjuicy@email.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="guests">Số khách *</label>
+                            <input type="number" id="guests" name="guests" min="1" required
+                                placeholder="Từ 2 - 20 người">
+                        </div>
+                        <div class="form-group">
+                            <label for="date">Ngày dùng bữa *</label>
+                            <input type="date" id="date" name="date" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="time">Khung giờ *</label>
+                            <select id="time" name="time" required>
+                                <option value="">Chọn khung giờ</option>
+                                <option value="11:00">11:00</option>
+                                <option value="11:30">11:30</option>
+                                <option value="12:00">12:00</option>
+                                <option value="12:30">12:30</option>
+                                <option value="13:00">13:00</option>
+                                <option value="17:00">17:00</option>
+                                <option value="17:30">17:30</option>
+                                <option value="18:00">18:00</option>
+                                <option value="18:30">18:30</option>
+                                <option value="19:00">19:00</option>
+                                <option value="19:30">19:30</option>
+                                <option value="20:00">20:00</option>
+                            </select>
+                        </div>
+                        <div class="form-group full-width">
+                            <label for="note">Ghi chú</label>
+                            <textarea id="note" name="note" placeholder="Yêu cầu đặc biệt (nếu có)..."></textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary booking-submit">Đặt bàn ngay</button>
+                </form>
+            </div>
+        </section>
+
+        <div class="booking-popup-overlay" id="bookingPopup">
+            <div class="booking-popup">
+                <div class="popup-icon">✓</div>
+                <h3>Đặt bàn thành công!</h3>
+                <p>Chúng tôi sẽ liên hệ để xác nhận thông tin của bạn trong thời gian sớm nhất.</p>
+                <button class="btn btn-primary close-popup" type="button">Đã rõ</button>
+            </div>
         </div>
+
         <div id="footer"></div>
     </div>
 
     <script src="/src/js/loader.js"></script>
     <script src="/src/js/homepage-slider.js"></script>
     <script src="/src/js/gallery.js"></script>
+    <script src="/src/js/homepage-booking.js"></script>
 </body>
 
 </html>
