--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="../../src/assets/images/logo.png" />
     <link rel="stylesheet" href="../../src/css/style.css" />
     <link rel="stylesheet" href="../../src/css/menu.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
 
   <body>
