--- a/public/pages/reserve.html
+++ b/public/pages/reserve.html
@@ -12,6 +12,7 @@
     <script src="https://npmcdn.com/flatpickr/dist/l10n/vn.js"></script>
     <link rel="stylesheet" href="../../src/css/style.css">
     <link rel="stylesheet" href="../../src/css/reserve.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div id="main">
