--- a/public/pages/deals.html
+++ b/public/pages/deals.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -23,20 +23,30 @@
                     <div class="promotion-grid">
                         <!-- Left Column -->
                         <div class="promo-left-column">
-                            <!-- Top Image -->
+                            <!-- Voucher Image 1: 50k -->
                             <div class="promo-image-top">
-                                <img src="https://placehold.co/600x400/E2E8F0/A0AEC0?text=Promo+Image+1" alt="Promotion 1" class="promo-img">
+                                <img src="/src/assets/images/voucher-50k.png" alt="Voucher giảm 50.000 VNĐ" class="promo-img">
                             </div>
 
-                            <!-- Bottom Image -->
+                            <!-- Voucher Image 2: 100k -->
+                            <div class="promo-image-top">
+                                <img src="/src/assets/images/voucher-100k.png" alt="Voucher giảm 100.000 VNĐ" class="promo-img">
+                            </div>
+
+                            <!-- Voucher Image 3: 200k -->
                             <div class="promo-image-bottom">
-                                <img src="https://placehold.co/600x400/E2E8F0/A0AEC0?text=Promo+Image+2" alt="Promotion 2" class="promo-img">
+                                <img src="/src/assets/images/voucher-200k.png" alt="Voucher giảm 200.000 VNĐ" class="promo-img">
+                            </div>
+
+                            <!-- Voucher Image 4: Drink -->
+                            <div class="promo-image-bottom">
+                                <img src="/src/assets/images/drink-voucher.png" alt="Voucher đồ uống miễn phí" class="promo-img">
                             </div>
                         </div>
 
                         <!-- Right Column -->
                         <div class="promo-right-column">
-                            <!-- Voucher Card 1 -->
+                            <!-- Voucher Card 1: 50k -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">COUPON 50.000 VNĐ</h3>
@@ -56,7 +66,27 @@
                                 </div>
                             </article>
 
-                            <!-- Voucher Card 2 -->
+                            <!-- Voucher Card 2: 100k -->
+                            <article class="voucher-card">
+                                <div class="voucher-card__header">
+                                    <h3 class="voucher-card__title">COUPON 100.000 VNĐ</h3>
+                                </div>
+                                <div class="voucher-card__body">
+                                    <div class="voucher-card__info">
+                                        <div class="voucher-info-item">
+                                            <span class="voucher-info-item__label">Thời gian áp dụng:</span>
+                                            <span class="voucher-info-item__value">01/12/2025 - 31/12/2025</span>
+                                        </div>
+                                        <div class="voucher-info-item">
+                                            <span class="voucher-info-item__label">Hết hạn sau:</span>
+                                            <span class="voucher-info-item__value">30 ngày</span>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="voucher-card__cta btn btn--primary">Xem chi tiết</a>
+                                </div>
+                            </article>
+
+                            <!-- Voucher Card 3: 200k -->
                             <article class="voucher-card">
                                 <div class="voucher-card__header">
                                     <h3 class="voucher-card__title">COUPON 200.000 VNĐ</h3>
@@ -75,6 +105,26 @@
                                     <a href="#" class="voucher-card__cta btn btn--primary">Xem chi tiết</a>
                                 </div>
                             </article>
+
+                            <!-- Voucher Card 4: Drink -->
+                            <article class="voucher-card">
+                                <div class="voucher-card__header">
+                                    <h3 class="voucher-card__title">VOUCHER NƯỚC UỐNG</h3>
+                                </div>
+                                <div class="voucher-card__body">
+                                    <div class="voucher-card__info">
+                                        <div class="voucher-info-item">
+                                            <span class="voucher-info-item__label">Thời gian áp dụng:</span>
+                                            <span class="voucher-info-item__value">01/11/2025 - 31/01/2026</span>
+                                        </div>
+                                        <div class="voucher-info-item">
+                                            <span class="voucher-info-item__label">Hết hạn sau:</span>
+                                            <span class="voucher-info-item__value">60 ngày</span>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="voucher-card__cta btn btn--primary">Xem chi tiết</a>
+                                </div>
+                            </article>
                         </div>
                     </div>
 
@@ -82,8 +132,6 @@
                     <div class="promotion-pagination" role="group" aria-label="Promotion slides navigation">
                         <button class="promotion-pagination__dot promotion-pagination__dot--active" aria-label="Slide 1" aria-current="true"></button>
                         <button class="promotion-pagination__dot" aria-label="Slide 2"></button>
-                        <button class="promotion-pagination__dot" aria-label="Slide 3"></button>
-                        <button class="promotion-pagination__dot" aria-label="Slide 4"></button>
                     </div>
                 </div>
             </section>
