--- a/payment/payment_fail.html
+++ b/payment/payment_fail.html
@@ -3,94 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanh toán thất bại</title>
+    <title>Thanh toán thất bại - Spicy & Juicy</title>
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="/src/css/style.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+    <style>
+        .page-content {
+            min-height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 60px 0;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #4A90E2 0%, #67B8E3 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 1000px;
+        .fail-container {
+            max-width: 700px;
             margin: 0 auto;
-            background: #A8B9CC;
-            border-radius: 30px;
-            padding: 30px 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Header */
-        .header {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 60px;
-        }
-
-        .logo {
-            font-size: 28px;
-            font-weight: 700;
-            color: #1e293b;
-        }
-
-        .location-btn {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            padding: 8px 16px;
             background: white;
-            border: none;
-            border-radius: 20px;
-            font-size: 14px;
-            color: #475569;
-            cursor: pointer;
-        }
-
-        .nav {
-            display: flex;
-            gap: 35px;
-            margin-left: auto;
-        }
-
-        .nav-link {
-            text-decoration: none;
-            color: #1e293b;
-            font-size: 16px;
-            font-weight: 500;
-        }
-
-        /* Fail Content */
-        .fail-content {
-            background: white;
-            border-radius: 20px;
+            border-radius: 24px;
             padding: 60px 40px;
             text-align: center;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
         }
 
         .fail-icon {
             width: 150px;
             height: 150px;
             margin: 0 auto 30px;
-            background: #ef4444;
-            border-radius: 20px;
+            background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
+            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             animation: shake 0.5s ease-out;
+            box-shadow: 0 10px 40px rgba(239, 68, 68, 0.3);
         }
 
-        .fail-icon svg {
-            width: 100px;
-            height: 100px;
-            stroke: white;
+        .fail-icon i {
+            font-size: 80px;
+            color: white;
         }
 
         @keyframes shake {
@@ -99,95 +54,126 @@
             20%, 40%, 60%, 80% { transform: translateX(10px); }
         }
 
-        h1 {
-            font-size: 32px;
+        .fail-title {
+            font-size: 2.5rem;
             color: #ef4444;
             margin-bottom: 20px;
             font-weight: 700;
         }
 
-        .order-id {
-            font-size: 16px;
-            color: #64748b;
+        .fail-message {
+            font-size: 1.1rem;
+            color: #6b7280;
+            margin-bottom: 15px;
+        }
+
+        .transaction-id {
+            font-size: 1rem;
+            color: #9ca3af;
             margin-bottom: 40px;
         }
 
-        .buttons {
+        .transaction-id strong {
+            color: #1f2937;
+            font-weight: 600;
+        }
+
+        .fail-buttons {
             display: flex;
             gap: 20px;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
-        .btn {
-            padding: 14px 32px;
+        .fail-btn {
+            padding: 16px 32px;
             border-radius: 12px;
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             border: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
         }
 
-        .btn-primary {
-            background: white;
-            color: #22c55e;
-            border: 2px solid #22c55e;
-        }
-
-        .btn-primary:hover {
-            background: #22c55e;
+        .btn-retry {
+            background: linear-gradient(90deg, #d31027, #ea384d);
             color: white;
+            box-shadow: 0 4px 15px rgba(211, 16, 39, 0.3);
+        }
+
+        .btn-retry:hover {
+            background: linear-gradient(90deg, #b91c1c, #dc2626);
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 6px 20px rgba(211, 16, 39, 0.4);
         }
 
-        .btn-secondary {
+        .btn-home {
             background: white;
-            color: #64748b;
-            border: 2px solid #e2e8f0;
+            color: #1f2937;
+            border: 2px solid #e5e7eb;
         }
 
-        .btn-secondary:hover {
-            background: #f8fafc;
-            border-color: #22c55e;
-            color: #22c55e;
+        .btn-home:hover {
+            background: #f9fafb;
+            border-color: var(--primary-color);
+            color: var(--primary-color);
+            transform: translateY(-2px);
+        }
+
+        @media (max-width: 768px) {
+            .fail-container {
+                padding: 40px 30px;
+            }
+
+            .fail-title {
+                font-size: 2rem;
+            }
+
+            .fail-buttons {
+                flex-direction: column;
+            }
+
+            .fail-btn {
+                width: 100%;
+                justify-content: center;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header class="header">
-            <div class="logo">Logo</div>
-            <button class="location-btn">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                    <circle cx="8" cy="8" r="7" stroke="currentColor" stroke-width="1.5"/>
-                    <circle cx="8" cy="8" r="2" fill="currentColor"/>
-                </svg>
-                Location
-            </button>
-            <nav class="nav">
-                <a href="#" class="nav-link">Menu</a>
-                <a href="#" class="nav-link">Promotion</a>
-                <a href="#" class="nav-link">Store</a>
-                <a href="#" class="nav-link">About</a>
-            </nav>
-        </header>
+    <div id="main">
+        <div id="header"></div>
 
-        <!-- Fail Content -->
-        <div class="fail-content">
-            <div class="fail-icon">
-                <svg viewBox="0 0 100 100" fill="none">
-                    <path d="M30 30L70 70M70 30L30 70" stroke="currentColor" stroke-width="8" stroke-linecap="round"/>
-                </svg>
-            </div>
-            <h1>Thanh toán đơn hàng không thành công</h1>
-            <p class="order-id">Mã theo dõi giao dịch của bạn: 65857127</p>
-            <div class="buttons">
-                <button class="btn btn-primary">Thanh Toán Lại</button>
-                <button class="btn btn-secondary">Quay Lại Trang Chủ</button>
+        <div class="page-content">
+            <div class="container">
+                <div class="fail-container">
+                    <div class="fail-icon">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
+                    <h1 class="fail-title">Thanh toán thất bại!</h1>
+                    <p class="fail-message">Rất tiếc, giao dịch của bạn không thành công</p>
+                    <p class="transaction-id">Mã giao dịch: <strong>#65857127</strong></p>
+                    <div class="fail-buttons">
+                        <a href="/payment/payment.html" class="fail-btn btn-retry">
+                            <i class="fa-solid fa-rotate-right"></i>
+                            Thanh Toán Lại
+                        </a>
+                        <a href="/public/index.html" class="fail-btn btn-home">
+                            <i class="fa-solid fa-house"></i>
+                            Quay Lại Trang Chủ
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div id="footer"></div>
     </div>
+
+    <script src="/src/js/loader.js"></script>
 </body>
 </html>
