--- a/payment/payment_success.html
+++ b/payment/payment_success.html
@@ -3,99 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanh toán thành công</title>
+    <title>Thanh toán thành công - Spicy & Juicy</title>
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="/src/css/style.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+    <style>
+        .page-content {
+            min-height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 60px 0;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #4A90E2 0%, #67B8E3 100%);
-            min-height: 100vh;
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .container {
-            max-width: 1000px;
+        .success-container {
+            max-width: 700px;
             margin: 0 auto;
-            background: #A8B9CC;
-            border-radius: 30px;
-            padding: 30px 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            position: relative;
-            z-index: 1;
-        }
-
-        /* Header */
-        .header {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 60px;
-        }
-
-        .logo {
-            font-size: 28px;
-            font-weight: 700;
-            color: #1e293b;
-        }
-
-        .location-btn {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            padding: 8px 16px;
             background: white;
-            border: none;
-            border-radius: 20px;
-            font-size: 14px;
-            color: #475569;
-            cursor: pointer;
-        }
-
-        .nav {
-            display: flex;
-            gap: 35px;
-            margin-left: auto;
-        }
-
-        .nav-link {
-            text-decoration: none;
-            color: #1e293b;
-            font-size: 16px;
-            font-weight: 500;
-        }
-
-        /* Success Content */
-        .success-content {
-            background: white;
-            border-radius: 20px;
+            border-radius: 24px;
             padding: 60px 40px;
             text-align: center;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
             position: relative;
+            overflow: hidden;
         }
 
         .success-icon {
             width: 150px;
             height: 150px;
             margin: 0 auto 30px;
-            background: #22c55e;
-            border-radius: 20px;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             animation: scaleIn 0.5s ease-out;
+            box-shadow: 0 10px 40px rgba(34, 197, 94, 0.3);
         }
 
-        .success-icon svg {
-            width: 100px;
-            height: 100px;
-            stroke: white;
+        .success-icon i {
+            font-size: 80px;
+            color: white;
         }
 
         @keyframes scaleIn {
@@ -109,56 +61,74 @@
             }
         }
 
-        h1 {
-            font-size: 32px;
+        .success-title {
+            font-size: 2.5rem;
             color: #22c55e;
             margin-bottom: 20px;
             font-weight: 700;
         }
 
+        .success-message {
+            font-size: 1.1rem;
+            color: #6b7280;
+            margin-bottom: 15px;
+        }
+
         .order-id {
-            font-size: 16px;
-            color: #64748b;
+            font-size: 1rem;
+            color: #9ca3af;
             margin-bottom: 40px;
         }
 
-        .buttons {
+        .order-id strong {
+            color: #1f2937;
+            font-weight: 600;
+        }
+
+        .success-buttons {
             display: flex;
             gap: 20px;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
-        .btn {
-            padding: 14px 32px;
+        .success-btn {
+            padding: 16px 32px;
             border-radius: 12px;
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             border: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
         }
 
         .btn-primary {
-            background: #22c55e;
+            background: linear-gradient(90deg, #d31027, #ea384d);
             color: white;
+            box-shadow: 0 4px 15px rgba(211, 16, 39, 0.3);
         }
 
         .btn-primary:hover {
-            background: #16a34a;
+            background: linear-gradient(90deg, #b91c1c, #dc2626);
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 6px 20px rgba(211, 16, 39, 0.4);
         }
 
         .btn-secondary {
             background: white;
-            color: #64748b;
-            border: 2px solid #e2e8f0;
+            color: #1f2937;
+            border: 2px solid #e5e7eb;
         }
 
         .btn-secondary:hover {
-            background: #f8fafc;
-            border-color: #22c55e;
-            color: #22c55e;
+            background: #f9fafb;
+            border-color: var(--primary-color);
+            color: var(--primary-color);
+            transform: translateY(-2px);
         }
 
         /* Confetti Animation */
@@ -166,7 +136,6 @@
             position: fixed;
             width: 10px;
             height: 10px;
-            background: #f0f;
             position: absolute;
             animation: confetti-fall 3s linear infinite;
         }
@@ -188,74 +157,75 @@
         .confetti:nth-child(8) { left: 80%; background: #3ae374; animation-delay: 1.4s; }
         .confetti:nth-child(9) { left: 90%; background: #778beb; animation-delay: 1.6s; }
         .confetti:nth-child(10) { left: 15%; background: #e77f67; animation-delay: 0.3s; }
-        .confetti:nth-child(11) { left: 25%; background: #cf6a87; animation-delay: 0.5s; }
-        .confetti:nth-child(12) { left: 35%; background: #f8b500; animation-delay: 0.7s; }
-        .confetti:nth-child(13) { left: 45%; background: #786fa6; animation-delay: 0.9s; }
-        .confetti:nth-child(14) { left: 55%; background: #f19066; animation-delay: 1.1s; }
-        .confetti:nth-child(15) { left: 65%; background: #f5cd79; animation-delay: 1.3s; }
-        .confetti:nth-child(16) { left: 75%; background: #546de5; animation-delay: 1.5s; }
-        .confetti:nth-child(17) { left: 85%; background: #f78fb3; animation-delay: 1.7s; }
-        .confetti:nth-child(18) { left: 95%; background: #3dc1d3; animation-delay: 1.9s; }
-        .confetti:nth-child(19) { left: 12%; background: #e15f41; animation-delay: 0.4s; }
-        .confetti:nth-child(20) { left: 88%; background: #63cdda; animation-delay: 1.8s; }
+
+        @media (max-width: 768px) {
+            .success-container {
+                padding: 40px 30px;
+            }
+
+            .success-title {
+                font-size: 2rem;
+            }
+
+            .success-buttons {
+                flex-direction: column;
+            }
+
+            .success-btn {
+                width: 100%;
+                justify-content: center;
+            }
+        }
     </style>
 </head>
 <body>
-    <!-- Confetti -->
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
-    <div class="confetti"></div>
+    <div id="main">
+        <div id="header"></div>
 
-    <div class="container">
-        <!-- Header -->
-        <header class="header">
-            <div class="logo">Logo</div>
-            <button class="location-btn">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                    <circle cx="8" cy="8" r="7" stroke="currentColor" stroke-width="1.5"/>
-                    <circle cx="8" cy="8" r="2" fill="currentColor"/>
-                </svg>
-                Location
-            </button>
-            <nav class="nav">
-                <a href="#" class="nav-link">Menu</a>
-                <a href="#" class="nav-link">Promotion</a>
-                <a href="#" class="nav-link">Store</a>
-                <a href="#" class="nav-link">About</a>
-            </nav>
-        </header>
+        <div class="page-content">
+            <div class="container">
+                <!-- Confetti -->
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
+                <div class="confetti"></div>
 
-        <!-- Success Content -->
-        <div class="success-content">
-            <div class="success-icon">
-                <svg viewBox="0 0 100 100" fill="none">
-                    <path d="M20 50L40 70L80 30" stroke="currentColor" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </div>
-            <h1>Thanh toán đơn hàng thành công</h1>
-            <p class="order-id">Mã theo dõi đơn hàng của bạn: 21549019</p>
-            <div class="buttons">
-                <button class="btn btn-primary">Theo Dõi Đơn Hàng</button>
-                <button class="btn btn-secondary">Quay Lại Trang Chủ</button>
+                <div class="success-container">
+                    <div class="success-icon">
+                        <i class="fa-solid fa-check"></i>
+                    </div>
+                    <h1 class="success-title">Thanh toán thành công!</h1>
+                    <p class="success-message">Cảm ơn bạn đã đặt hàng tại Spicy & Juicy</p>
+                    <p class="order-id">Mã theo dõi đơn hàng: <strong>#21549019</strong></p>
+                    <div class="success-buttons">
+                        <a href="#" class="success-btn btn-primary" onclick="trackOrder()">
+                            <i class="fa-solid fa-truck"></i>
+                            Theo Dõi Đơn Hàng
+                        </a>
+                        <a href="/public/index.html" class="success-btn btn-secondary">
+                            <i class="fa-solid fa-house"></i>
+                            Quay Lại Trang Chủ
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div id="footer"></div>
     </div>
+
+    <script src="/src/js/loader.js"></script>
+    <script>
+        function trackOrder() {
+            // Implement order tracking functionality
+            alert('Chức năng theo dõi đơn hàng sẽ được cập nhật sớm!');
+        }
+    </script>
 </body>
 </html>
