cap nhat menu - anh

--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -96,7 +96,7 @@
                 onclick="filterCategory('lau-nhat')"
               >
                 <img
-                  src="../../src/assets/images/Lau-nhat.jpg"
+                  src="../../src/assets/images/lau-sukiyaki-1 (1).jpg"
                   alt="Lẩu Nhật"
                 />
                 <span>Lẩu Nhật</span>
@@ -107,7 +107,7 @@
                 onclick="filterCategory('nuoc-uong')"
               >
                 <img
-                  src="../../src/assets/images/nuoc-uong.jpg"
+                  src="../../src/assets/images/cafe_tra.webp"
                   alt="Nước uống"
                 />
                 <span>Nước uống</span>
