--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -151,31 +151,24 @@
             </div>
           </div>
 
-            <div class="product-card">
-              <img
-                src="../../src/assets/images/Lau-vn/Lau-de.jpg"
-                alt="Lẩu dê Tây Nguyên"
-                class="product-card__image"
-              />
-              <div class="product-card__content">
-                <h3 class="product-card__name">Lẩu dê Tây Nguyên</h3>
-                <p class="product-card__price">Giá: 340.000 đ</p>
-                <button class="product-card__button">ĐẶT MÓN</button>
-              </div>
+          <div class="product-card">
+            <img src="../../src/assets/images/Lau-vn/Lau-de.jpg" alt="Lẩu dê Tây Nguyên" class="product-card__image" />
+            <div class="product-card__content">
+              <h3 class="product-card__name">Lẩu dê Tây Nguyên</h3>
+              <p class="product-card__price">Giá: 340.000 đ</p>
+              <button class="product-card__button" onclick="detailProduct(7)">ĐẶT MÓN</button>
             </div>
+          </div>
 
-            <div class="product-card">
-              <img
-                src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg"
-                alt="Lẩu ếch Năm Lâu"
-                class="product-card__image"
-              />
-              <div class="product-card__content">
-                <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
-                <p class="product-card__price">Giá: 140.000 đ</p>
-                <button class="product-card__button">ĐẶT MÓN</button>
-              </div>
+          <div class="product-card">
+            <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
+              class="product-card__image" />
+            <div class="product-card__content">
+              <h3 class="product-card__name">Lẩu ếch Năm Lâu</h3>
+              <p class="product-card__price">Giá: 140.000 đ</p>
+              <button class="product-card__button" onclick="detailProduct(8)">ĐẶT MÓN</button>
             </div>
+          </div>
 
           <div class="product-card">
             <img src="../../src/assets/images/Lau-vn/Lau-ech (1).jpg" alt="Lẩu ếch Năm Lâu"
@@ -306,6 +299,19 @@
       </div>
     </div>
 
-    <script src="/src/js/loader.js"></script>
-  </body>
+    <div id="footer"></div>
+
+    <script>
+      src = "/src/js/menu.js";
+    </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  </div>
+  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
+  <script src="/src/js/data.js"></script>
+  <script src="/src/js/menu.js"></script>
+  <script src="/src/js/loader.js"></script>
+</body>
+
 </html>
